{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 1161,
  "lineage": "eeb2f45a-f121-c96a-8fbc-92595bb69cf8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9699a6dd673c9ff",
            "arn": "arn:aws:ec2:us-east-2:215848077383:elastic-ip/eipalloc-0f9699a6dd673c9ff",
            "association_id": "eipassoc-0926f1acf7b10b312",
            "domain": "vpc",
            "id": "eipalloc-0f9699a6dd673c9ff",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f8404d12fad6f563",
            "private_dns": "ip-10-0-143-126.us-east-2.compute.internal",
            "private_ip": "10.0.143.126",
            "public_dns": "ec2-3-139-123-34.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.123.34",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cf665a505f16c22",
            "arn": "arn:aws:ec2:us-east-2:215848077383:elastic-ip/eipalloc-02cf665a505f16c22",
            "association_id": "eipassoc-061f598fb3b4d45ea",
            "domain": "vpc",
            "id": "eipalloc-02cf665a505f16c22",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02c062dc4e7d5a61c",
            "private_dns": "ip-10-0-158-153.us-east-2.compute.internal",
            "private_ip": "10.0.158.153",
            "public_dns": "ec2-3-139-193-21.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.193.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040855b0715ee6f0b",
            "arn": "arn:aws:ec2:us-east-2:215848077383:instance/i-011770fcdfd3a39cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011770fcdfd3a39cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0deeb8ebabb7dd2a2",
            "private_dns": "ip-10-0-142-128.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.142.128",
            "public_dns": "ec2-18-188-95-232.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.95.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcce268b86a18dec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021b65705325f0664",
            "tags": {
              "Name": "bastion_host_1"
            },
            "tags_all": {
              "Name": "bastion_host_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbdd1ad9fa0961cb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_keypair",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.bastion_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040855b0715ee6f0b",
            "arn": "arn:aws:ec2:us-east-2:215848077383:instance/i-052b96cfc129d3d14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052b96cfc129d3d14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f5ad31be876bcdf",
            "private_dns": "ip-10-0-153-97.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.153.97",
            "public_dns": "ec2-52-15-149-51.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.149.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d16a394f937a9df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f25252f916caac8",
            "tags": {
              "Name": "bastion_host_2"
            },
            "tags_all": {
              "Name": "bastion_host_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbdd1ad9fa0961cb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_keypair",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.bastion_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eks_control_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040855b0715ee6f0b",
            "arn": "arn:aws:ec2:us-east-2:215848077383:instance/i-06845d84723908787",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "eks-control-node-profile",
            "id": "i-06845d84723908787",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "management-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e72e49a0cb31bdee",
            "private_dns": "ip-10-0-10-205.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f2d29b397a87367",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c14780c84333f8b",
            "tags": {
              "Name": "eks-control-node"
            },
            "tags_all": {
              "Name": "eks-control-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0895a3743a3889aa6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_instance_profile.eks_control_node_profile",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role.eks_control_node_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_controller",
            "aws_key_pair.management_keypair",
            "aws_security_group.management_sg",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.management_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:internet-gateway/igw-06dbf29dfba30cc6b",
            "id": "igw-06dbf29dfba30cc6b",
            "owner_id": "215848077383",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bastion_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:215848077383:loadbalancer/net/bastion-nlb/9c3dba758bca033a",
            "arn_suffix": "net/bastion-nlb/9c3dba758bca033a",
            "dns_name": "bastion-nlb-9c3dba758bca033a.elb.us-east-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:215848077383:loadbalancer/net/bastion-nlb/9c3dba758bca033a",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "bastion-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f25252f916caac8"
              },
              {
                "subnet_id": "subnet-021b65705325f0664"
              }
            ],
            "subnets": [
              "subnet-00f25252f916caac8",
              "subnet-021b65705325f0664"
            ],
            "tags": {
              "Name": "bastion_nlb"
            },
            "tags_all": {
              "Name": "bastion_nlb"
            },
            "vpc_id": "vpc-0f4419531a43d2b59",
            "zone_id": "ZLMOA37VPKANP"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bastion_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:215848077383:listener/net/bastion-nlb/9c3dba758bca033a/afa85939d6f0220a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:215848077383:targetgroup/bastion-tg/4197de3f2f93d2c7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:215848077383:listener/net/bastion-nlb/9c3dba758bca033a/afa85939d6f0220a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:215848077383:loadbalancer/net/bastion-nlb/9c3dba758bca033a",
            "mutual_authentication": [],
            "port": 22,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.bastion_nlb",
            "aws_lb_target_group.bastion_tg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bastion_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:215848077383:targetgroup/bastion-tg/4197de3f2f93d2c7",
            "arn_suffix": "targetgroup/bastion-tg/4197de3f2f93d2c7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "port": "22",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:215848077383:targetgroup/bastion-tg/4197de3f2f93d2c7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:215848077383:loadbalancer/net/bastion-nlb/9c3dba758bca033a"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bastion-tg",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "bastion_tg"
            },
            "tags_all": {
              "Name": "bastion_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bastion_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:215848077383:targetgroup/bastion-tg/4197de3f2f93d2c7-20260308181443666600000016",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:215848077383:targetgroup/bastion-tg/4197de3f2f93d2c7",
            "target_id": "i-011770fcdfd3a39cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion_1",
            "aws_key_pair.bastion_keypair",
            "aws_lb_target_group.bastion_tg",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.bastion_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bastion_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:215848077383:targetgroup/bastion-tg/4197de3f2f93d2c7-20260308181443911800000017",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:215848077383:targetgroup/bastion-tg/4197de3f2f93d2c7",
            "target_id": "i-052b96cfc129d3d14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion_2",
            "aws_key_pair.bastion_keypair",
            "aws_lb_target_group.bastion_tg",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.bastion_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9699a6dd673c9ff",
            "association_id": "eipassoc-0926f1acf7b10b312",
            "connectivity_type": "public",
            "id": "nat-00641578cfc014ea7",
            "network_interface_id": "eni-0f8404d12fad6f563",
            "private_ip": "10.0.143.126",
            "public_ip": "3.139.123.34",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-021b65705325f0664",
            "tags": {
              "Name": "nat_gateway_a"
            },
            "tags_all": {
              "Name": "nat_gateway_a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cf665a505f16c22",
            "association_id": "eipassoc-061f598fb3b4d45ea",
            "connectivity_type": "public",
            "id": "nat-02c7b0b6ce423689c",
            "network_interface_id": "eni-02c062dc4e7d5a61c",
            "private_ip": "10.0.158.153",
            "public_ip": "3.139.193.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00f25252f916caac8",
            "tags": {
              "Name": "nat_gateway_b"
            },
            "tags_all": {
              "Name": "nat_gateway_b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:route-table/rtb-08f5a6171c45f73aa",
            "id": "rtb-08f5a6171c45f73aa",
            "owner_id": "215848077383",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00641578cfc014ea7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_1"
            },
            "tags_all": {
              "Name": "private_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:route-table/rtb-0fce01f0a07e5eabe",
            "id": "rtb-0fce01f0a07e5eabe",
            "owner_id": "215848077383",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02c7b0b6ce423689c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_2"
            },
            "tags_all": {
              "Name": "private_rt_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_2",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:route-table/rtb-0d31cbcf1ae32833e",
            "id": "rtb-0d31cbcf1ae32833e",
            "owner_id": "215848077383",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06dbf29dfba30cc6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf2517135a061e93",
            "route_table_id": "rtb-08f5a6171c45f73aa",
            "subnet_id": "subnet-05c14780c84333f8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a61c78e04fa2f59f",
            "route_table_id": "rtb-0fce01f0a07e5eabe",
            "subnet_id": "subnet-0ffc2f6dc458a2ea9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057f44846e74b7de0",
            "route_table_id": "rtb-0d31cbcf1ae32833e",
            "subnet_id": "subnet-021b65705325f0664"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0920efb6e0b2ed923",
            "route_table_id": "rtb-0d31cbcf1ae32833e",
            "subnet_id": "subnet-00f25252f916caac8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:security-group/sg-01b829a65d0508394",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b829a65d0508394",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "215848077383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:security-group/sg-060d49d52b11a1dfa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060d49d52b11a1dfa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b829a65d0508394"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "215848077383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:security-group/sg-0dbdd1ad9fa0961cb",
            "description": "Allow SSH access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbdd1ad9fa0961cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.173.221.178/32"
                ],
                "description": "SSH from admin IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "215848077383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "management_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:security-group/sg-0895a3743a3889aa6",
            "description": "Security group for EKS management node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0895a3743a3889aa6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from bastion hosts only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dbdd1ad9fa0961cb"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-management-sg",
            "name_prefix": "",
            "owner_id": "215848077383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-management-sg"
            },
            "tags_all": {
              "Name": "eks-management-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:security-group/sg-07ce990ba4c8b172b",
            "description": "Allow PostgreSQL access from EKS app and management node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ce990ba4c8b172b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from app SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060d49d52b11a1dfa"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from management SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0895a3743a3889aa6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "infrahash-rds-sg",
            "name_prefix": "",
            "owner_id": "215848077383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infrahash-rds-sg"
            },
            "tags_all": {
              "Name": "infrahash-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.management_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_mgmt_to_eks_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow management node to reach EKS private endpoint",
            "from_port": 443,
            "id": "sgrule-1733158551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aab52e9843b2953b",
            "security_group_rule_id": "sgr-009cbefc113c48915",
            "self": false,
            "source_security_group_id": "sg-0895a3743a3889aa6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_controller",
            "aws_security_group.management_sg",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "management_allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH from bastion hosts only",
            "from_port": 22,
            "id": "sgrule-3229918685",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0895a3743a3889aa6",
            "security_group_rule_id": "sgr-056adc6b876c6fa7a",
            "self": false,
            "source_security_group_id": "sg-0dbdd1ad9fa0961cb",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.management_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from EKS cluster security group",
            "from_port": 5432,
            "id": "sgrule-3234731586",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ce990ba4c8b172b",
            "security_group_rule_id": "sgr-053a160f19d3b9de7",
            "self": false,
            "source_security_group_id": "sg-0aab52e9843b2953b",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_controller",
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_security_group.management_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:subnet/subnet-05c14780c84333f8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c14780c84333f8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215848077383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:subnet/subnet-0ffc2f6dc458a2ea9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffc2f6dc458a2ea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215848077383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:subnet/subnet-021b65705325f0664",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021b65705325f0664",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "215848077383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:subnet/subnet-00f25252f916caac8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f25252f916caac8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "215848077383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f4419531a43d2b59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:215848077383:vpc/vpc-0f4419531a43d2b59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0035f5dd9cb042130",
            "default_route_table_id": "rtb-0a350ac4152d766c7",
            "default_security_group_id": "sg-0eaf792c6077f0160",
            "dhcp_options_id": "dopt-0105aadbf61f7b7c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4419531a43d2b59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a350ac4152d766c7",
            "owner_id": "215848077383",
            "tags": {
              "Name": "cloud_vpc"
            },
            "tags_all": {
              "Name": "cloud_vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}